--- a/sidebar.html
+++ b/sidebar.html
@@ -5,7 +5,7 @@
   <div class="d-flex justify-content-between mt-3">
     <div class="flexRow">
       <button type="button" id="add-btn" class="btn btn-primary">추가</button>
-      <button type="button" id="close-btn" class="btn btn-warning">닫기</button>
+      <button type="button" id="close-btn" class="btn btn-danger">닫기</button>
     </div>
   </div>
 </div>
